# slick_queue_py

./: .gitignore  .pypirc.template  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  atomic_ops.py  atomic_ops_ext.cpp  pyproject.toml  setup.py  slick_queue_py.py
.github/workflows/: ci.yml  publish-conda.yml  publish-pypi.yml  publish-release.yml  release.yml
conda.recipe/: meta.yaml
tests/: CMakeLists.txt  cleanup_shm.py  cpp_multi_producer.cpp  cpp_work_stealing_consumer.cpp  test_atomic_cursor.py  test_atomic_ops.py  test_interop.py  test_local_mode.py  test_multi_producer.py
